--- a/ProyectoAnalisis/ProyectoAnalisis/ProyectoAnalisis.csproj
+++ b/ProyectoAnalisis/ProyectoAnalisis/ProyectoAnalisis.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Content Include="AgregarCaso.aspx" />
     <Content Include="AsignarCaso.aspx" />
+    <Content Include="ControlCaso.aspx" />
     <Content Include="EnviarSolicitud.aspx" />
     <Content Include="images\img01.jpg" />
     <Content Include="images\img02.jpg" />
@@ -85,6 +86,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Solicitudes.aspx" />
     <Content Include="style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -103,6 +105,13 @@
     <Compile Include="AsignarCaso.aspx.designer.cs">
       <DependentUpon>AsignarCaso.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ControlCaso.aspx.cs">
+      <DependentUpon>ControlCaso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ControlCaso.aspx.designer.cs">
+      <DependentUpon>ControlCaso.aspx</DependentUpon>
+    </Compile>
     <Compile Include="EnviarSolicitud.aspx.cs">
       <DependentUpon>EnviarSolicitud.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -118,6 +127,13 @@
       <DependentUpon>Maestra.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solicitudes.aspx.cs">
+      <DependentUpon>Solicitudes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Solicitudes.aspx.designer.cs">
+      <DependentUpon>Solicitudes.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
