--- a/ProyectoAnalisis/ProyectoAnalisis/Web.config
+++ b/ProyectoAnalisis/ProyectoAnalisis/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="analisis1ConnectionString" connectionString="server=127.0.0.1;user id=root;password=12345;persistsecurityinfo=True;database=analisis1"
+      providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
