--- a/ProyectoAnalisis/ProyectoAnalisis/ProyectoAnalisis.csproj
+++ b/ProyectoAnalisis/ProyectoAnalisis/ProyectoAnalisis.csproj
@@ -159,6 +159,7 @@
       <DependentUpon>Maestra.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PruebasCodigo.cs" />
     <Compile Include="Solicitudes.aspx.cs">
       <DependentUpon>Solicitudes.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
